update website-theme and use external-link

--- a/templates/pages/characters.pug
+++ b/templates/pages/characters.pug
@@ -5,109 +5,109 @@
       p Some of my favourite characters and characters that I identify with are:
       ul
         li from 
-          a(href='https://en.wikipedia.org/wiki/Star_Trek',target='_blank') Star Trek
+          +external-link('https://en.wikipedia.org/wiki/Star_Trek') Star Trek
           | :
           ul
             li
-              a(href='https://en.wikipedia.org/wiki/Spock',target='_blank') Spock
+              +external-link('https://en.wikipedia.org/wiki/Spock') Spock
               | , because I often think of the world logically
             li
-              a(href='http://memory-alpha.wikia.com/wiki/Spock_(mirror)',target='_blank') Evil (Mirror) Spock
+              +external-link('http://memory-alpha.wikia.com/wiki/Spock_(mirror)') Evil (Mirror) Spock
               | , because of his outrageous beard and he's just hysterical
             li
-              a(href='https://en.wikipedia.org/wiki/Data_%28Star_Trek%29',target='_blank') Data
+              +external-link('https://en.wikipedia.org/wiki/Data_%28Star_Trek%29') Data
               | , because I am curious, confused and if he was human he'd probably be autistic
         li from 
-          a(href='https://en.wikipedia.org/wiki/Danganronpa',target='_blank') Danganronpa
+          +external-link('https://en.wikipedia.org/wiki/Danganronpa') Danganronpa
           | :
           ul
             li
-              a(href='https://en.wikipedia.org/wiki/List_of_Danganronpa_characters#Danganronpa_2:_Goodbye_Despair',target='_blank') Nagito Komaeda
+              +external-link('https://en.wikipedia.org/wiki/List_of_Danganronpa_characters#Danganronpa_2:_Goodbye_Despair') Nagito Komaeda
               | , because I'm very lucky and obsessed with hope, and also trash
             li
-              a(href='https://en.wikipedia.org/wiki/List_of_Danganronpa_characters#Danganronpa:_Trigger_Happy_Havoc',target='_blank') Chihiro Fujisaki
+              +external-link('https://en.wikipedia.org/wiki/List_of_Danganronpa_characters#Danganronpa:_Trigger_Happy_Havoc') Chihiro Fujisaki
               | , because I love programming and feel similar about life
         li from 
-          a(href='https://en.wikipedia.org/wiki/Miss_Kobayashi%27s_Dragon_Maid',target='_blank') Kobayashi-san Chi no Maid Dragon
+          +external-link('https://en.wikipedia.org/wiki/Miss_Kobayashi%27s_Dragon_Maid') Kobayashi-san Chi no Maid Dragon
           | :
           ul
             li
-              a(href='http://maid-dragon.wikia.com/wiki/Fafnir',target='_blank') Fafnir
+              +external-link('http://maid-dragon.wikia.com/wiki/Fafnir') Fafnir
               | , because he's dapper, awesome, interesting and acts hilariously
         li from 
-          a(href='https://en.wikipedia.org/wiki/Future_Diary',target='_blank') Mirai Nikki
+          +external-link('https://en.wikipedia.org/wiki/Future_Diary') Mirai Nikki
           | :
           ul
             li
-              a(href='http://futurediary.wikia.com/wiki/Yukiteru_Amano',target='_blank') Yukiteru Amano
+              +external-link('http://futurediary.wikia.com/wiki/Yukiteru_Amano') Yukiteru Amano
               |, because my waifu is Yuno, and Yuki is depressed and I would act like he acts in the OVA
         li from 
-          a(href='https://en.wikipedia.org/wiki/Berserk_%28manga%29',target='_blank') Berserk
+          +external-link('https://en.wikipedia.org/wiki/Berserk_%28manga%29') Berserk
           | :
           ul
             li
-              a(href='https://en.wikipedia.org/wiki/List_of_Berserk_characters#Griffith',target='_blank') Griffith
+              +external-link('https://en.wikipedia.org/wiki/List_of_Berserk_characters#Griffith') Griffith
               |, because he's sneaky and smart and he looks fabulous
         li from 
-          a(href='https://en.wikipedia.org/wiki/Black_Butler',target='_blank') Kuroshitsuji
+          +external-link('https://en.wikipedia.org/wiki/Black_Butler') Kuroshitsuji
           | :
           ul
             li
-              a(href='[spoilers]',target='_blank') Grell Sutcliff
+              +external-link('[spoilers]') Grell Sutcliff
               |, because he's hysterical, fabulous and has good taste in butlers
         li from 
-          a(href='https://en.wikipedia.org/wiki/The_Ancient_Magus%27_Bride',target='_blank') Mahoutsukai no Yome
+          +external-link('https://en.wikipedia.org/wiki/The_Ancient_Magus%27_Bride') Mahoutsukai no Yome
           | :
           ul
             li
-              a(href='http://ancientmagusbride.wikia.com/wiki/Elias_Ainsworth',target='_blank') Elias Ainsworth
+              +external-link('http://ancientmagusbride.wikia.com/wiki/Elias_Ainsworth') Elias Ainsworth
               |, because he's caring, doesn't act like outrageous humans and Chise is my waifu
         li from 
-          a(href='https://en.wikipedia.org/wiki/Neon_Genesis_Evangelion',target='_blank') Neon Genesis Evangelion
+          +external-link('https://en.wikipedia.org/wiki/Neon_Genesis_Evangelion') Neon Genesis Evangelion
           | :
           ul
             li
-              a(href='https://en.wikipedia.org/wiki/Shinji_Ikari',target='_blank') Shinji Ikari
+              +external-link('https://en.wikipedia.org/wiki/Shinji_Ikari') Shinji Ikari
               |, because... existentialism, essentially. He's a whiner, but I like his thought patterns when he's being existential.
         li from 
-          a(href='https://en.wikipedia.org/wiki/My_Little_Pony:_Friendship_Is_Magic',target='_blank') MLP
+          +external-link('https://en.wikipedia.org/wiki/My_Little_Pony:_Friendship_Is_Magic') MLP
           | :
           ul
             li
-              a(href='https://en.wikipedia.org/wiki/List_of_My_Little_Pony%3A_Friendship_Is_Magic_characters#Twilight_Sparkle',target='_blank') Twilight Sparkle
+              +external-link('https://en.wikipedia.org/wiki/List_of_My_Little_Pony%3A_Friendship_Is_Magic_characters#Twilight_Sparkle') Twilight Sparkle
               |, because knowledge and being awesome
         li from 
-          a(href='https://en.wikipedia.org/wiki/Alice%27s_Adventures_in_Wonderland',target='_blank') Alice's Adventures in Wonderland
+          +external-link('https://en.wikipedia.org/wiki/Alice%27s_Adventures_in_Wonderland') Alice's Adventures in Wonderland
           | :
           ul
             li
-              a(href='https://en.wikipedia.org/wiki/Hatter_(Alice%27s_Adventures_in_Wonderland)',target='_blank') The Mad Hatter
+              +external-link('https://en.wikipedia.org/wiki/Hatter_(Alice%27s_Adventures_in_Wonderland)') The Mad Hatter
               |, because I like his sense of humour, eccentricity and hats
         li from 
-          a(href='https://www.youtube.com/user/TVFilthyFrank',target='_blank') The Filthy Frank Show
+          +external-link('https://www.youtube.com/user/TVFilthyFrank') The Filthy Frank Show
           | :
           ul
             li
-              a(href='http://filthy-frank.wikia.com/wiki/Filthy_Frank',target='_blank') Real Frank
+              +external-link('http://filthy-frank.wikia.com/wiki/Filthy_Frank') Real Frank
               |, because he's lost and good to his crew. ^Also depression, yay^
         li from 
-          a(href='https://en.wikipedia.org/wiki/Back_to_the_Future_(franchise)',target='_blank') Back to the Future
+          +external-link('https://en.wikipedia.org/wiki/Back_to_the_Future_(franchise)') Back to the Future
           | :
           ul
             li
-              a(href='https://en.wikipedia.org/wiki/Emmett_Brown',target='_blank') "Doc" Emmett Brown
+              +external-link('https://en.wikipedia.org/wiki/Emmett_Brown') "Doc" Emmett Brown
               |, because he's eccentric and time travel, hell yeah
         li from 
-          a(href='https://en.wikipedia.org/wiki/Doctor_Who',target='_blank') Doctor Who
+          +external-link('https://en.wikipedia.org/wiki/Doctor_Who') Doctor Who
           | :
           ul
             li
-              a(href='https://en.wikipedia.org/wiki/The_Doctor_(Doctor_Who)',target='_blank') The Doctor
+              +external-link('https://en.wikipedia.org/wiki/The_Doctor_(Doctor_Who)') The Doctor
               |, again because of eccentricity, inventions and awesomeness
         li from 
-          a(href='https://en.wikipedia.org/wiki/Battleborn_(video_game)',target='_blank') Battleborn
+          +external-link('https://en.wikipedia.org/wiki/Battleborn_(video_game)') Battleborn
           | :
           ul
             li
-              a(href='https://battleborn.com/en/battleborn/marquis/',target='_blank') Marquis
+              +external-link('https://battleborn.com/en/battleborn/marquis/') Marquis
               |, because those quotes are amazing, dunk dunk dunk!
