--- a/templates/pages/favs.pug
+++ b/templates/pages/favs.pug
@@ -10,56 +10,56 @@
           strong Maths
         ul
           li
-            a(href='https://www.youtube.com/user/numberphile',target='_blank') Numberphile
+            +external-link('https://www.youtube.com/user/numberphile') Numberphile
           li
-            a(href='https://www.youtube.com/channel/UC1_uAIS3r8Vu6JjXWvastJg',target='_blank') Mathologer
+            +external-link('https://www.youtube.com/channel/UC1_uAIS3r8Vu6JjXWvastJg') Mathologer
         li
           strong Science
         ul
           li
-            a(href='https://www.youtube.com/user/Vsauce',target='_blank') Vsauce
+            +external-link('https://www.youtube.com/user/Vsauce') Vsauce
         li
           strong Computer Science
         ul
           li
-            a(href='https://www.youtube.com/user/Computerphile',target='_blank') Computerphile
+            +external-link('https://www.youtube.com/user/Computerphile') Computerphile
         li
           strong General Knowledge / Other
         ul
           li
-            a(href='https://www.youtube.com/channel/UC9pgQfOXRsp4UKrI8q0zjXQ',target='_blank') Lindybeige
+            +external-link('https://www.youtube.com/channel/UC9pgQfOXRsp4UKrI8q0zjXQ') Lindybeige
       p
         strong TV shows/movies 
         | (I also have an 
-        a(href='https://www.imdb.com/list/ls029966237/',target='_blank') IMDB
+        +external-link('https://www.imdb.com/list/ls029966237/') IMDB
         |  watchlist)
       ul
         li The Hannibal film and TV series:
           ul
             li
-              a(href='https://www.imdb.com/title/tt0091474/',target='_blank') Manhunter (1986)
+              +external-link('https://www.imdb.com/title/tt0091474/') Manhunter (1986)
               br
               | (well, you know... it's got... Iron Butterfly? *shrug*)
             li
-              a(href='https://www.imdb.com/title/tt0102926/',target='_blank') The Silence of the Lambs (1991)
+              +external-link('https://www.imdb.com/title/tt0102926/') The Silence of the Lambs (1991)
             li
-              a(href='https://www.imdb.com/title/tt0212985/',target='_blank') Hannibal (2001)
+              +external-link('https://www.imdb.com/title/tt0212985/') Hannibal (2001)
             li
-              a(href='https://www.imdb.com/title/tt0289765/',target='_blank') Red Dragon (2002)
+              +external-link('https://www.imdb.com/title/tt0289765/') Red Dragon (2002)
             li
-              a(href='https://www.imdb.com/title/tt0367959/',target='_blank') Hannibal Rising (2007)
+              +external-link('https://www.imdb.com/title/tt0367959/') Hannibal Rising (2007)
             li
-              a(href='https://www.imdb.com/title/tt2243973/',target='_blank') Hannibal (TV series, 2013-)
+              +external-link('https://www.imdb.com/title/tt2243973/') Hannibal (TV series, 2013-)
         li Star Trek films and series:
           ul
             li
-              a(href='https://www.imdb.com/title/tt0092007/',target='_blank') Star Trek IV: The Voyage Home (1986)
+              +external-link('https://www.imdb.com/title/tt0092007/') Star Trek IV: The Voyage Home (1986)
             li
-              a(href='https://www.imdb.com/title/tt0117731/',target='_blank') Star Trek: First Contact (1996)
+              +external-link('https://www.imdb.com/title/tt0117731/') Star Trek: First Contact (1996)
             li
-              a(href='https://www.imdb.com/title/tt0092455/',target='_blank') Star Trek: The Next Generation (1987-1994)
+              +external-link('https://www.imdb.com/title/tt0092455/') Star Trek: The Next Generation (1987-1994)
         li
-          a(href='https://www.imdb.com/title/tt0056751/',target='_blank') Doctor Who (1963-)
+          +external-link('https://www.imdb.com/title/tt0056751/') Doctor Who (1963-)
           |  (my favourite Doctor is Tom Baker)	
       p
         strong Music
@@ -97,39 +97,39 @@
         strong Games
       ul
         li
-          a(href='http://www.idsoftware.com/en-gb',target='_blank') Quake
+          +external-link('http://www.idsoftware.com/en-gb') Quake
         li
-          a(href='http://sauerbraten.org/',target='_blank') Cube 2: Sauerbraten
+          +external-link('http://sauerbraten.org/') Cube 2: Sauerbraten
         li
-          a(href='https://en.wikipedia.org/wiki/The_Elder_Scrolls_IV:_Oblivion',target='_blank') The Elder Scrolls IV: Oblivion
+          +external-link('https://en.wikipedia.org/wiki/The_Elder_Scrolls_IV:_Oblivion') The Elder Scrolls IV: Oblivion
         li
-          a(href='https://ddlc.moe/',target='_blank') Doki Doki Literature Club
+          +external-link('https://ddlc.moe/') Doki Doki Literature Club
         li
-          a(href='https://danganronpa.us/',target='_blank') Danganronpa
+          +external-link('https://danganronpa.us/') Danganronpa
           |  (no despair girls / hope side spoilers please!)
       p
         strong Coding languages:
       ul
         li
-          a(href='https://www.typescriptlang.org/',target='_blank') TypeScript
+          +external-link('https://www.typescriptlang.org/') TypeScript
           |  (for serious work)
         li
-          a(href='https://en.wikipedia.org/wiki/JavaScript',target='_blank') Javascript
+          +external-link('https://en.wikipedia.org/wiki/JavaScript') Javascript
           |  (for small, easy things)
         li
-          a(href='https://pugjs.org',target='_blank') Pug
+          +external-link('https://pugjs.org') Pug
           |  (used to generate this website)
       p
         strong Operating Systems
       ul
         li
-          a(href='http://www.gnu.org/gnu/why-gnu-linux.en.html',target='_blank') GNU/Linux
+          +external-link('http://www.gnu.org/gnu/why-gnu-linux.en.html') GNU/Linux
           |: 
-          a(href='http://kubuntu.org',target='_blank') Kubuntu
+          +external-link('http://kubuntu.org') Kubuntu
         li
-          a(href='https://en.wikipedia.org/wiki/Blue_Screen_of_Death',target='_blank') Windows
+          +external-link('https://en.wikipedia.org/wiki/Blue_Screen_of_Death') Windows
           |: 
-          a(href='https://en.wikipedia.org/wiki/Windows_98#Windows_98_Second_Edition',target='_blank') 98 SE
+          +external-link('https://en.wikipedia.org/wiki/Windows_98#Windows_98_Second_Edition') 98 SE
         li
           | All-time: 
-          a(href='http://riscos.com/riscos/310/index.php',target='_blank') RISC OS
+          +external-link('http://riscos.com/riscos/310/index.php') RISC OS
