--- a/templates/pages/music.pug
+++ b/templates/pages/music.pug
@@ -12,9 +12,9 @@
             source(src='/music/GothicOrchestra.ogg')
             source(src='/music/SatanicOrchestra.mp3')
           | &nbsp;
-          a(href='/music/GothicOrchestra.ogg',target='_blank') OGG
+          +external-link('/music/GothicOrchestra.ogg') OGG
           | &nbsp;
-          a(href='/music/SatanicOrchestra.mp3',target='_blank') MP3
+          +external-link('/music/SatanicOrchestra.mp3') MP3
       .border.m-3
         p.m-3
           strong Shall It Be
@@ -23,9 +23,9 @@
             source(src='/music/ShallItBe.ogg')
             source(src='/music/ShallItBe.mp3')
           | &nbsp;
-          a(href='/music/ShallItBe.ogg',target='_blank') OGG
+          +external-link('/music/ShallItBe.ogg') OGG
           | &nbsp;
-          a(href='/music/ShallItBe.mp3',target='_blank') MP3
+          +external-link('/music/ShallItBe.mp3') MP3
       .border.m-3
         p.m-3
           strong Swim Deep (take 1)
@@ -34,6 +34,6 @@
             source(src='/music/SwimDeepTake1.ogg')
             source(src='/music/SwimDeepTake1.mp3')
           | &nbsp;
-          a(href='/music/SwimDeepTake1.ogg',target='_blank') OGG
+          +external-link('/music/SwimDeepTake1.ogg') OGG
           | &nbsp;
-          a(href='/music/SwimDeepTake1.mp3',target='_blank') MP3
+          +external-link('/music/SwimDeepTake1.mp3') MP3
