--- a/templates/pages/health.pug
+++ b/templates/pages/health.pug
@@ -7,15 +7,15 @@
       p I have been diagnosed with the following things, both physical and mental intermingling:
       ul
         li Mild 
-          a(href='https://en.wikipedia.org/wiki/Amnesia',target='_blank') short-term memory loss 
+          +external-link('https://en.wikipedia.org/wiki/Amnesia') short-term memory loss 
           | (allegedly caused by mild 
-          a(href='https://en.wikipedia.org/wiki/Posttraumatic_stress_disorder',target='_blank') PTSD
+          +external-link('https://en.wikipedia.org/wiki/Posttraumatic_stress_disorder') PTSD
           | )
         li
-          a(href='https://www.nhs.uk/conditions/fibromyalgia/',target='_blank') Fibromyalgia
+          +external-link('https://www.nhs.uk/conditions/fibromyalgia/') Fibromyalgia
         li
-          a(href='https://www.nhs.uk/conditions/autism/',target='_blank') Asperger's Syndrome
+          +external-link('https://www.nhs.uk/conditions/autism/') Asperger's Syndrome
         li
-          a(href='https://www.nhs.uk/conditions/attention-deficit-hyperactivity-disorder-adhd/',target='_blank') ADHD
+          +external-link('https://www.nhs.uk/conditions/attention-deficit-hyperactivity-disorder-adhd/') ADHD
         li
-          a(href='https://www.nhs.uk/conditions/generalised-anxiety-disorder/',target='_blank') Anxiety
+          +external-link('https://www.nhs.uk/conditions/generalised-anxiety-disorder/') Anxiety
