--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -6,7 +6,7 @@
       p I am a software engineer, mathematics lover, radio ham and musician.
       p I work remotely to care for my future wife,
         |&nbsp;
-        a(href='http://tsumikimikan.com',target='_blank') Tsumiki
+        +external-link('http://tsumikimikan.com') Tsumiki
         |.
       p I also enjoy discordant and nonsensical commentary.
       p I can speak about maths, physics, computer science and linguistics at length.
