add rolling shutter link

--- a/templates/pages/maths.pug
+++ b/templates/pages/maths.pug
@@ -21,6 +21,8 @@
           | &nbsp;(this is actually the answer similar to 
           +external-link('https://www.youtube.com/watch?v=zSL8asTgpzA') the riddle 
           | I posed on my YouTube channel)
+        li
+          +external-link('https://rawgit.com/danwdart/projects/master/js/rolling/index.html') Rolling Shutter effect example
       p My current&nbsp;
         a(href='https://oeis.org',target='_blank',title='Online Encyclopedia of Integer Sequences') OEIS
         | &nbsp;contributions are:
