add and update links to projects, update to use gh pages links rather than rawgit

--- a/templates/pages/maths.pug
+++ b/templates/pages/maths.pug
@@ -3,26 +3,34 @@
   .row
     .col-md-8.offset-md-2.py-3.bg-light
       p Mathematics has always been a great pastime for me.
-      p I have invented quite a few visualisations and generators for several interesting pieces of mathematics, some of which you can see and try on my&nbsp;
+      p I have invented quite a few visualisations and generators for several interesting pieces of mathematics, some of which you can see and try on repos like my&nbsp;
         +external-link('https://github.com/danwdart/projects/tree/master/js/maths') projects repo on GitHub
       p Some notable (read: working right now) examples are:
       ul
         li
-          +external-link('https://rawgit.com/danwdart/projects/master/js/maths/src/cfe/index.html') Continued Fraction Expander
-        li A set of gravity simulators 
-          +external-link('https://rawgit.com/danwdart/gravity/master/2/gravity.html') (sun version, left click for planets, middle click for stars)
-          |, 
-          +external-link('https://rawgit.com/danwdart/gravity/master/4/gravity.html') (black hole version)
+          +external-link('https://danwdart.github.io/projects/js/maths/src/cfe/index.html') Continued Fraction Expander
+        li A set of gravity simulators:
+          ul
+            li
+              +external-link('https://danwdart.github.io/gravity/2/gravity.html') Sun version (left click for planets, middle click for stars)
+            li
+              +external-link('https://danwdart.github.io/gravity/4/gravity.html') Black hole version
         li
-          +external-link('https://rawgit.com/danwdart/projects/master/js/maths/src/cellautomata/index.html') Cell Automata
+          +external-link('https://danwdart.github.io/projects/js/maths/src/cellautomata/') Cell Automata
         li
-          +external-link('https://rawgit.com/danwdart/projects/master/js/maths/src/sternbrocot/sbgraphtones.html') Stern-Brocot Graph Tones (warning: loud audio)
+          +external-link('https://danwdart.github.io/projects/js/maths/src/graphAndSound/') Graph and Sound Demos
           br
-          | &nbsp;(this is actually the answer similar to 
+          | &nbsp;(one of these is actually the answer similar to 
           +external-link('https://www.youtube.com/watch?v=zSL8asTgpzA') the riddle 
           | I posed on my YouTube channel)
         li
-          +external-link('https://rawgit.com/danwdart/projects/master/js/rolling/index.html') Rolling Shutter effect example
+          +external-link('https://danwdart.github.io/projects/js/rolling/') Rolling Shutter effect example
+        li
+          +external-link('https://danwdart.github.io/heartish/cardint.html') Interactive Cardioid (keyboard only)
+        li
+          +external-link('https://danwdart.github.io/heartish/card.html') Random Cardioid
+        li
+          +external-link('https://danwdart.github.io/heartish/index.html') Circle Reflection
       p My current&nbsp;
         a(href='https://oeis.org',target='_blank',title='Online Encyclopedia of Integer Sequences') OEIS
         | &nbsp;contributions are:
