update tumblr url

--- a/templates/includes/menu.pug
+++ b/templates/includes/menu.pug
@@ -17,7 +17,7 @@ div
     +menuitem('About This Site')
       include ../pages/about
     +menuitem-external('https://jolharg.com') Software
-    +menuitem-external('https://blog.dandart.co.uk') Blog
-    +menuitem-external('https://chihiro.dandart.co.uk') WIP Blog Upgrade
+    +menuitem-external('https://blog.dandart.co.uk') Blogspot
+    +menuitem-external('https://floofyhacker.com') Tumblr
     +menuitem('Contact')
       include ../pages/contact
