--- a/templates/pages/maths.pug
+++ b/templates/pages/maths.pug
@@ -31,11 +31,13 @@
           +external-link('https://danwdart.github.io/heartish/card.html') Random Cardioid
         li
           +external-link('https://danwdart.github.io/heartish/index.html') Circle Reflection
-      p My current&nbsp;
+      p My submitted &nbsp;
         a(href='https://oeis.org',target='_blank',title='Online Encyclopedia of Integer Sequences') OEIS
-        | &nbsp;contributions are:
+        | &nbsp;sequences are:
       ul
         li
           +external-link('https://oeis.org/A275124') A275124: Multiples of 5 where Pisano periods of Fibonacci numbers A001175 and Lucas numbers A106291 agree.
         li
-          a(href='https://oeis.org/A275167',target='_blank' ) A275167: Pisano periods of A275124.
+          +external-link('https://oeis.org/A275167') A275167: Pisano periods of A275124.
+        li
+          +external-link('https://oeis.org/A308267') A308267: Numbers which divide their Zeckendorffian format exactly. 
