Fave is Haskell now

--- a/templates/pages/favs.pug
+++ b/templates/pages/favs.pug
@@ -108,17 +108,11 @@
           +external-link('https://danganronpa.us/') Danganronpa
           |  (no despair girls / hope side spoilers please!)
       p
-        strong Coding languages:
+        strong Coding language:
       ul
         li
-          +external-link('https://www.typescriptlang.org/') TypeScript
-          |  (for serious work)
-        li
-          +external-link('https://en.wikipedia.org/wiki/JavaScript') Javascript
-          |  (for small, easy things)
-        li
-          +external-link('https://pugjs.org') Pug
-          |  (used to generate this website)
+          +external-link('https://www.haskell.org/') Haskell
+          |  (it's epic and pure!
       p
         strong Operating Systems
       ul
