add some classical music in too

--- a/templates/pages/favs.pug
+++ b/templates/pages/favs.pug
@@ -85,6 +85,12 @@
         li Starset
           ul
             li My Demons
+        li Bach
+          ul
+            li Wohltemperierte Klavier
+        li Holst
+          ul
+            li Planets
         li Many more...
       p
         strong Musical styles
