--- a/templates/pages/favs.pug
+++ b/templates/pages/favs.pug
@@ -118,7 +118,7 @@
       ul
         li
           +external-link('https://www.haskell.org/') Haskell
-          |  (it's epic and pure!
+          |  (it's epic and pure!)
       p
         strong Operating Systems
       ul
