add social icons via font awesome

--- a/templates/includes/menu.pug
+++ b/templates/includes/menu.pug
@@ -17,7 +17,47 @@ div
     +menuitem('About This Site')
       include ../pages/about
     +menuitem-external('https://jolharg.com') Software
-    +menuitem-external('https://blog.dandart.co.uk') Blogspot
-    +menuitem-external('https://floofyhacker.com') Tumblr
+    //+menuitem-external('https://blog.dandart.co.uk') Blogspot
+    //+menuitem-external('https://floofyhacker.com') Tumblr
     +menuitem('Contact')
       include ../pages/contact
+  .row.social-row
+    .text-right.social-inside
+      // 630 on mobile
+      +social('blogger-b', 'Blogger', 'https://blog.dandart.co.uk/', 'black')
+      +social('diaspora', 'Diaspora', 'https://joindiaspora.com/people/08b11e5f4fff2a8b', 'black')
+      //+social('discord', 'Discord', 'url', 'black')
+      //+social-no('facebook', 'Facebook', 'url', 'black')
+      // +social('firefox
+      +social-s('envelope', 'Email', 'mailto:website@dandart.co.uk', 'black')
+      +social('github', 'GitHub', 'https://github.com/danwdart', 'black')
+      //+social-no('google', 'Google', 'url', 'black')
+      +social('hacker-news', 'Hacker News', 'https://news.ycombinator.com/user?id=dandart', 'black')
+      +social('hackerrank', 'HackerRank', 'https://www.hackerrank.com/dandart', 'black')
+      +social('imdb', 'ImDB', 'https://www.imdb.com/user/ur81806610', 'black')
+      //+social('instagram', 'Instagram', 'url', 'black')
+      //+social('keybase', 'Keybase', 'url', 'black')
+      +social('lastfm', 'Last.fm', 'https://www.last.fm/user/DanDart', 'black')
+      +social('linkedin', 'LinkedIn', 'https://www.linkedin.com/in/dandart', 'black')
+      //+social('linux', 'Linux', 'url', 'black')
+      //+social('microsoft', 'Microsoft', 'url', 'black')
+      +social('mix', 'Mix', 'https://mix.com/dandart', 'black')
+      +social('npm', 'npm', 'https://www.npmjs.com/~dandart', 'black')
+      +social('patreon', 'Patreon', 'https://www.patreon.com/kathiedart', 'black')
+      +social('playstation', 'PlayStation', 'https://my.playstation.com/profile/MeowzorFnord', 'black')
+      //+social-no('pinterest', 'Pinterest', 'url', 'black')
+      //+pump('url', 'black')
+      //+social('raspberry-pi', 'Raspberry PI', 'url', 'black')
+      +social('reddit', 'Reddit', 'https://www.reddit.com/user/jolharg', 'black')
+      //+social('skype', 'Skype', 'url', 'black')
+      +social('snapchat', 'Snapchat', '/img/snapcode.svg', 'black')
+      +social('soundcloud', 'SoundCloud', 'https://soundcloud.com/kathiedart', 'black')
+      //+social('spotify', 'Spotify', 'url', 'black')
+      +social('stack-overflow', 'Stack Overflow', 'https://stackoverflow.com/users/1764563/dan-dart', 'black')
+      +social('steam', 'Steam', 'https://steamcommunity.com/id/dandart', 'black')
+      +social('tumblr', 'Tumblr', 'https://floofyhacker.com', 'black')
+      //+social-no('twitter', 'Twitter', 'url', 'black')
+      //+social('ubuntu', 'Ubuntu', 'url', 'black')
+      //+social-no('windows', 'Windows', 'url', 'black')
+      +social('youtube', 'YouTube', 'https://www.youtube.com/channel/UCaHwNzu1IlQKWCQEXACflaw', 'black')
+      
