--- a/templates/index.pug
+++ b/templates/index.pug
@@ -1,4 +1,5 @@
 include ../node_modules/@jolharg/website-theme/templates/mixins/index
+include mixins/index
 doctype html
 html(lang='en-GB')
   head
