add Hash Parker OEIS

--- a/templates/pages/maths.pug
+++ b/templates/pages/maths.pug
@@ -3,9 +3,12 @@
   .row
     .col-md-8.offset-md-2.py-3.bg-light
       p Mathematics has always been a great pastime for me.
-      p I have invented quite a few visualisations and generators for several interesting pieces of mathematics, some of which you can see and try on repos like my&nbsp;
-        +external-link('https://github.com/danwdart/projects/tree/master/js/maths') projects repo on GitHub
-      p Some notable (read: working right now) examples are:
+      p I have invented quite a few visualisations and generators for several interesting pieces of mathematics, some of which you can see and try on repos like my projects repo on GitHub (
+        +external-link('https://github.com/danwdart/projects/tree/master/haskell/src/maths') Haskell examples
+        | &nbsp;
+        +external-link('https://github.com/danwdart/projects/tree/master/js/maths') JS examples
+        | )
+      p Some web-based notable (read: working right now) examples are:
       ul
         li
           +external-link('https://danwdart.github.io/projects/js/maths/src/cfe/index.html') Continued Fraction Expander
@@ -31,7 +34,7 @@
           +external-link('https://danwdart.github.io/heartish/card.html') Random Cardioid
         li
           +external-link('https://danwdart.github.io/heartish/index.html') Circle Reflection
-      p My submitted &nbsp;
+      p My approved &nbsp;
         a(href='https://oeis.org',target='_blank',title='Online Encyclopedia of Integer Sequences') OEIS
         | &nbsp;sequences are:
       ul
@@ -40,4 +43,6 @@
         li
           +external-link('https://oeis.org/A275167') A275167: Pisano periods of A275124.
         li
-          +external-link('https://oeis.org/A308267') A308267: Numbers which divide their Zeckendorffian format exactly. 
+          +external-link('https://oeis.org/A308267') A308267: Numbers which divide their Zeckendorffian format exactly.
+        li
+          +external-link('https://oeis.org/A309979') A309979: Hash Parker numbers: Integers whose real 32nd root's first six nonzero digits (after the decimal point) rearranged in ascending order are equal to 234477. 
